<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/advert_details"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytJobTitle"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_job_title"
            app:startIconDrawable="@drawable/info_circle"
            app:placeholderText="@string/layout_job_title_placeholder"
            app:startIconContentDescription="@string/title_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtjobtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytAppType"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_appointment_type"
            app:startIconDrawable="@drawable/info_circle"
            app:placeholderText="@string/layout_appointment_type_placeholder"
            app:startIconContentDescription="@string/app_type_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtAppType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytJobPosition"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_job_position"
            app:startIconDrawable="@drawable/info_circle"
            app:placeholderText="@string/layout_job_position_placeholder"
            app:startIconContentDescription="@string/layout_job_position_placeholder">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtJobPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytJobLocation"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_job_location"
            app:startIconDrawable="@drawable/info_circle"
            app:placeholderText="@string/layout_job_location_placeholder"
            app:startIconContentDescription="@string/layout_job_location_placeholder">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtJobLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytAddCompany"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_advertising_company"
            app:startIconDrawable="@drawable/info_circle"
            app:placeholderText="@string/layout_ad_company_placeholder"
            app:startIconContentDescription="@string/add_company_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtAdCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytJobDesc"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_job_description"
            app:startIconDrawable="@drawable/info_circle"
            app:placeholderText="@string/layout_job_description_placeholder"
            app:startIconContentDescription="@string/job_description_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtJobDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytMinQualification"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_min_qualification"
            app:startIconDrawable="@drawable/info_circle"
            app:placeholderText="@string/layout_min_qualification_placeholder"
            app:startIconContentDescription="@string/min_qualification_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtMinQualification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytGrossSalary"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_gross_salary"
            app:startIconDrawable="@drawable/info_circle"
            app:placeholderText="@string/layout_gross_salary_placeholder"
            app:startIconContentDescription="@string/gross_salary_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtGrossSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</ScrollView>