<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_details"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytEmail"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_email"
            app:startIconDrawable="@drawable/email"
            app:placeholderText="@string/layout_email_placeholder"
            app:startIconContentDescription="@string/email_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytPassword"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_password"
            app:startIconDrawable="@drawable/lock"
            app:placeholderText="@string/layout_password_placeholder"
            app:startIconContentDescription="@string/password_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytConfirmPassword"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="15dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_password2"
            app:startIconDrawable="@drawable/lock"
            app:placeholderText="@string/layout_password2_placeholder"
            app:startIconContentDescription="@string/email_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytFirstName"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_first_name"
            app:startIconDrawable="@drawable/person"
            app:placeholderText="@string/layout_first_name_placeholder"
            app:startIconContentDescription="@string/person_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytLastname"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_lastname"
            app:startIconDrawable="@drawable/person"
            app:placeholderText="@string/layout_last_name_placeholder"
            app:startIconContentDescription="@string/person_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytCellphoneNo"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_cell_placeholder"
            app:startIconDrawable="@drawable/phone"
            app:placeholderText="@string/layout_cell_placeholder"
            app:startIconContentDescription="@string/phone_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtCellphoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytIDNo"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="20dp"
            android:hint="@string/layout_identity_no_placeholder"
            app:startIconDrawable="@drawable/id"
            app:placeholderText="@string/layout_hint_id_no"
            app:startIconContentDescription="@string/person_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtIDNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytQualification"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_margin="20dp"
            android:hint="@string/layout_highest_qualification_placeholder"
            app:startIconDrawable="@drawable/ic_school"
            app:placeholderText="@string/layout_highest_qualification_placeholder"
            app:startIconContentDescription="@string/qualification_icon_description">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/qualifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytStudyField"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_margin="20dp"
            android:hint="@string/layout_hint_study_field"
            app:startIconDrawable="@drawable/ic_school"
            app:placeholderText="@string/layout_hint_study_field"
            app:startIconContentDescription="@string/field_of_study_icon_description">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/studyField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>